--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>HOME</title>
+</head>
+<body>
+
+<p><a href="blog.html">BLOG</a></p>
+
+<p>
+This is my personal site.<br>
+I write when I want.
+</p>
+
+</body>
+</html>
 
