--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>THE BLOG</title>
+</head>
+<body>
+
+<p><a href="index.html">HOME</a></p>
+
+<h1>THE BLOG</h1>
+
+<h2>First Post</h2>
+<p>2025-12-16</p>
+<p>
+This is my first post.<br>
+Just writing.
+</p>
+
+<h2>Another Day</h2>
+<p>2025-12-10</p>
+<p>
+Nothing special.<br>
+But I wanted to leave a trace.
+</p>
+
+</body>
+</html>
 
