--- a/blog.html
+++ b/blog.html
@@ -10,18 +10,10 @@
 
 <h1>THE BLOG</h1>
 
-<h2>First Post</h2>
-<p>2025-12-16</p>
+<h2>第一篇<h2>
+<p>2025-12-17</p>
 <p>
 This is my first post.<br>
-Just writing.
-</p>
-
-<h2>第一篇>di>d
-<p>2025-12-10</p>
-<p>
-Nothing special.<br>
-But I wanted to leave a trace.
 </p>
 
 </body>
